Device and workstation POST