@@ -15,7 +15,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor(onConstructor = @__(@Autowired))
@@ -29,7 +28,7 @@ public class EmployeeService {
                 .findAll()
                 .stream()
                 .map(EmployeeResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public EmployeeResponse findById(Long id) throws EmployeeNotFoundException {
